--- a/test.html
+++ b/test.html
@@ -58,7 +58,7 @@
                 if(x == 'a'){
                    c.setAttribute('href', './Alice.html'); 
                }else{
-                   c.setAttribute('href', 'teatable.html');
+                   c.setAttribute('href', './Qin.html');
                }
                 c.setAttribute('color', '#2d2350');
                 c.innerHTML = ' Cook a tea for her';
