--- a/Qin.html
+++ b/Qin.html
@@ -10,7 +10,7 @@
     <div id="askForTea">
         <section>
             <div class="bigImage">
-            <img src="./img/Qin.png">
+            <img src="./img/qin.png">
             </div>
             <div class="Text">
                 <p>A Chinese young lady sit down with a warm smile, 'nice to meet you. I am Qin.'</p>
