Fixed the hover problem

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
 <body>
     <div id="teapic">
-        <a href="./test.html"></a>
+        <a href="./test.html" class="main-enterance">
+            <div></div>
+        </a>
         <section>
-        <p id="small">An interative story about Chinese tea culture.</p>
-        <p>Yichi (Lyric) Liu | lyricliu@gatech.edu | LIU TWINE EXERCISE </p>
-    </section>
+            <p id="small">An interative story about Chinese tea culture.</p>
+            <p>Yichi (Lyric) Liu | lyricliu@gatech.edu | LIU TWINE EXERCISE </p>
+        </section>
     </div>
-    
+
 </body>
 
 </html>
