--- a/Li.html
+++ b/Li.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="Alice.css">
 </head>
 <body>
+    <embed src="./audio/Li.mp3" autostart="true" hidden="true" loop="1" volume="50" />
 	<div id="askForTea">
         <section>
             <div class="bigImage">
