--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
 </head>
 
 <body>
+    <embed loop="1" id="bgs" />
+    <embed src="./audio/Qin.mp3" autostart="true" hidden="true" loop="1" volume="100" />
     <div id="teapic">
-        <a href="./test.html"></a>
+        <a value="audio" onmouseover="play()" href="./test.html" class="main-enterance">
+            <div></div>
+        </a>
         <section>
-        <p id="small">An interative story about Chinese tea culture.</p>
-        <p>Yichi (Lyric) Liu | lyricliu@gatech.edu | LIU TWINE EXERCISE </p>
-    </section>
+            <p id="small">An interative story about Chinese tea culture.</p>
+            <p>Yichi (Lyric) Liu | lyricliu@gatech.edu | LIU TWINE EXERCISE </p>
+        </section>
     </div>
-    
+    <script type="text/javascript">
+    function play() {　　　　　　
+        document.all.bgs.src = "./audio/start.wav";
+    }
+    </script>
 </body>
 
 </html>
