--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <embed src="./audio/chooseGuest.mp3" autostart="true" hidden="true" loop="1" volume="100" />
     <div id="enterName">
         <p>Let's back to 18th century and you owned an elegent teashop named Chaji. </p>
         <p>
