--- a/Alice.html
+++ b/Alice.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="Alice.css">
 </head>
 <body>
+    <embed src="./audio/Alice.mp3" autostart="true" hidden="true" loop="1" volume="50" />
     <div id="askForTea">
         <section>
             <div class="bigImage">
