--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <embed loop="1" id="bgs" />
+    <bgsource loop="1" id="bgs" />
     <embed src="./audio/Qin.mp3" autostart="true" hidden="true" loop="1" volume="100" />
     <div id="teapic">
         <a value="audio" onmouseover="play()" href="./test.html" class="main-enterance">
