--- a/test.html
+++ b/test.html
@@ -10,12 +10,12 @@
 <body>
     <embed src="./audio/chooseGuest.mp3" autostart="true" hidden="true" loop="1" volume="100" />
     <div id="enterName">
-        <p>Let's back to 18th century and you owned an elegent teashop named Chaji. </p>
+        <p>Let's back to 18th century and you owned an elegant teashop named Chaji. </p>
         <p>
             You are a energetic tea fanatic and you always happily chat with people coming from all over the world while brewing tea for them. Buying a tea is never rushed, a purchase involves plenty of tasting and leisurely conversation.
         </p>
-        <p>Your goal is brewing delicious and healthisest tea for your customers while bring them into a cultural world filled with sensory pleasures. </p>
-        <p>Okay, at the begining, please chooce a guest you want to serve with.</P>
+        <p>Your goal is brewing delicious and healthiest tea for your customers while bring them into a cultural world filled with sensory pleasures. </p>
+        <p>Okay, at the beginning, please choose a guest you want to serve with.</P>
         <p id="addPeople"></p>
         <p id="selectP"></p>
     </div>
